# dflow-TriToOrth-convert

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  publish-on-dockerhub.yml  publish-on-pypi.yml
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: main.py  orth.py  parse.py
{{cookiecutter.plugin_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.plugin_name}}/.github/workflows/: publish-on-dockerhub.yml  publish-on-pypi.yml
{{cookiecutter.plugin_name}}/examples/: workflow.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py
