[project]
name = "{{cookiecutter.plugin_name}}"
dynamic = ["version"]
description = "{{cookiecutter.short_description}}"
{%- if cookiecutter.contact_email %}
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.contact_email}}"}]
{% else %}
authors = [{name = "{{cookiecutter.author}}"}]
{% endif -%}
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha"
]
keywords = ["dflow", "OP"]
requires-python = ">=3.6"
dependencies = [
    "importlib-metadata",
    "pydflow>={{cookiecutter.dflow_min_version}}",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[project.urls]
Source = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.repo_name}}"
